@@ -6,6 +6,7 @@
 
   * Rescue errors from bogus encodings
   * 7bit content-encoding support.  Thanks sporkmonger! GH #2
+  * Fixed a bug with iconv conversion. Thanks awesomeman! GH #9
 
 === 0.9.3
 
